<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Lost&amp;Found APP"
        android:background="#ff00ff00"
        app:titleTextColor="#ffff0000"
        app:titleMarginStart="120dp"/>

    <android.widget.Button
        android:id="@+id/createbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_advert"
        android:layout_marginTop="200dp"
        android:background="@drawable/green_rectangle_button"
        />

    <android.widget.Button
        android:id="@+id/showbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_items"
        android:background="@drawable/green_rectangle_button"
        android:layout_marginTop="20dp"/>
    <android.widget.Button
        android:id="@+id/btn_show_on_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map"
        android:background="@drawable/green_rectangle_button"
        android:layout_marginTop="20dp"/>



</LinearLayout>